Made changes in code3 file

--- a/Dir2/code3.html
+++ b/Dir2/code3.html
@@ -3,4 +3,6 @@
 <head>this is first coding file in second directory</head>
 <body bgcolor="red">
 <h1>inside second coding file </h1>
+updating after creating another branch with name subbranch
+
 </body>
