--- a/dir2/code1.html
+++ b/dir2/code1.html
@@ -5,3 +5,19 @@
       <h1>inside first coding file in directory</h1>
 
 
+
+
+
+
+
+
+
+
+I have changed location from dir1 to dir 2
+
+
+
+
+
+bcjhbdjhfcwejkfkjew
+some random data for the file
